Created Background sync for Health Connect and fixed bug about health connect when you try to connect first time