@@ -1,15 +1,17 @@
 package com.fjuul.sdk.activitysources.entities;
 
+import android.annotation.SuppressLint;
+
+import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
+
 import java.time.Duration;
 import java.util.Collections;
+import java.util.HashSet;
 import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import android.annotation.SuppressLint;
-import androidx.annotation.NonNull;
-import androidx.annotation.Nullable;
 
 /**
  * A configuration class for the ActivitySourceManager that configures its behavior using the specified parameters.
@@ -38,6 +40,15 @@ public class ActivitySourcesManagerConfig {
 
     @NonNull
     private Set<FitnessMetricsType> collectableFitnessMetrics;
+
+    @NonNull
+    private BackgroundSyncMode healthConnectIntradayBackgroundSyncMode;
+
+    @NonNull
+    private BackgroundSyncMode healthConnectProfileSyncMode;
+
+    @NonNull
+    Set<FitnessMetricsType> collectableHCFitnessMetrics;
 
     /**
      * Returns the mode that indicates whether intraday data of Google Fit should be synced in the background.
@@ -88,6 +99,37 @@ public class ActivitySourcesManagerConfig {
     @NonNull
     public Set<FitnessMetricsType> getCollectableFitnessMetrics() {
         return collectableFitnessMetrics;
+    }
+
+    /**
+     * Returns the mode that indicates whether intraday data of Health Connect should be synced in the background.
+     *
+     * @return background mode
+     */
+    @NonNull
+    public BackgroundSyncMode getHealthConnectIntradayBackgroundSyncMode() {
+        return healthConnectIntradayBackgroundSyncMode;
+    }
+
+
+    /**
+     * Returns the mode that indicates whether profile data of Health Connect should be synced in the background.
+     *
+     * @return background mode
+     */
+    @NonNull
+    public BackgroundSyncMode getHealthConnectProfileBackgroundSyncMode() {
+        return healthConnectProfileSyncMode;
+    }
+
+    /**
+     * Returns a set of health connect fitness metrics that are collected locally (i.e. not by external trackers).
+     *
+     * @return set of fitness metrics
+     */
+    @NonNull
+    public Set<FitnessMetricsType> getCollectableHCFitnessMetrics() {
+        return collectableHCFitnessMetrics;
     }
 
     public static class Builder {
@@ -141,10 +183,10 @@ public class ActivitySourcesManagerConfig {
          * this option expresses an intent to have the background synchronization when it's applicable but it doesn't
          * mean a requirement of the connection to Google Fit.
          *
-         * @see #enableGoogleFitIntradayBackgroundSync
-         * @see #enableGoogleFitSessionsBackgroundSync
          * @param minSessionDuration min duration for sessions to be synced
          * @return configured builder
+         * @see #enableGoogleFitIntradayBackgroundSync
+         * @see #enableGoogleFitSessionsBackgroundSync
          */
         @NonNull
         public Builder enableGoogleFitBackgroundSync(@NonNull Duration minSessionDuration) {
@@ -167,6 +209,40 @@ public class ActivitySourcesManagerConfig {
         @NonNull
         public Builder enableProfileBackgroundSync() {
             config.profileBackgroundSyncMode = BackgroundSyncMode.ENABLED;
+            return this;
+        }
+
+        /**
+         * Enables background syncing of intraday data from Health connect. The types of data to be collected will be
+         * determined by the set of collectable fitness metrics. If intraday types are not included in the collectable
+         * fitness metrics, the background synchronization will be disabled.<br>
+         * Note: SDK will schedule background syncs only if there is a current connection to Health connect. In other words,
+         * this option expresses an intent to have the background synchronization when it's applicable but it doesn't
+         * mean a requirement of the connection to Health Connect.
+         *
+         * @return configured builder
+         */
+        @SuppressLint("NewApi")
+        @NonNull
+        public Builder enableHealthConnectIntradayBackgroundSync() {
+            config.healthConnectIntradayBackgroundSyncMode = BackgroundSyncMode.ENABLED;
+            return this;
+        }
+
+        /**
+         * Enables background synchronization of user profile properties (e.g. height, weight) from the local activity
+         * sources.<br>
+         * Note: SDK will schedule background syncs only if there are appropriate current connections to the local
+         * activity source. In other words, this option expresses an intent to have the background synchronization when
+         * it's applicable but it doesn't mean a strict requirement of having the appropriate connections.<br>
+         * If you enabled this then keep in mind that the user profile may be updated anytime, and therefore you should
+         * try to get a fresh state of the profile at every session start of your application.
+         *
+         * @return configured builder
+         */
+        @NonNull
+        public Builder enableHealthConnectProfileBackgroundSync() {
+            config.healthConnectProfileSyncMode = BackgroundSyncMode.ENABLED;
             return this;
         }
 
@@ -217,6 +293,28 @@ public class ActivitySourcesManagerConfig {
         }
 
         /**
+         * Disables background syncing of intraday data from Google Fit.
+         *
+         * @return configured builder
+         */
+        @NonNull
+        public Builder disableHealthConnectIntradayBackgroundSync() {
+            config.healthConnectIntradayBackgroundSyncMode = BackgroundSyncMode.DISABLED;
+            return this;
+        }
+
+        /**
+         * Disables background syncing of user profile properties (e.g. height, weight) from the local activity sources.
+         *
+         * @return configured builder
+         */
+        @NonNull
+        public Builder disableHealthConnectProfileBackgroundSync() {
+            config.healthConnectProfileSyncMode = BackgroundSyncMode.DISABLED;
+            return this;
+        }
+
+        /**
          * Disables any kind of background syncs. Use this building method if you want to sure that everything must be
          * synchronized only manually by explicit invocations.
          *
@@ -226,8 +324,24 @@ public class ActivitySourcesManagerConfig {
         public Builder disableBackgroundSync() {
             disableGoogleFitBackgroundSync();
             disableProfileBackgroundSync();
+            disableHealthConnectProfileBackgroundSync();
+            disableHealthConnectIntradayBackgroundSync();
             return this;
         }
+
+        /**
+         * Disables any kind of health connect background syncs. Use this building method if you want to sure that everything must be
+         * synchronized only manually by explicit invocations.
+         *
+         * @return configured builder
+         */
+        @NonNull
+        public Builder disableHealthConnectBackgroundSync() {
+            disableHealthConnectProfileBackgroundSync();
+            disableHealthConnectIntradayBackgroundSync();
+            return this;
+        }
+
 
         /**
          * Sets the special background mode avoiding any changes of scheduled background workers. Currently, it supposed
@@ -245,6 +359,19 @@ public class ActivitySourcesManagerConfig {
         }
 
         /**
+         * Sets the special background mode avoiding any changes of scheduled health connect background workers.
+         * Currently, it supposed to be used internally only.
+         *
+         * @return configured builder
+         */
+        @NonNull
+        public Builder keepUntouchedHealthConnectBackgroundSync() {
+            config.healthConnectProfileSyncMode = BackgroundSyncMode.UNTOUCHED;
+            config.healthConnectIntradayBackgroundSyncMode = BackgroundSyncMode.UNTOUCHED;
+            return this;
+        }
+
+        /**
          * Defines the set of fitness metrics to be collected by local trackers (i.e. Google Fit). The set of metrics is
          * used to determine a list of requested permissions for local activity sources, and to determine background
          * tasks for syncing data from Google Fit. <br>
@@ -258,9 +385,25 @@ public class ActivitySourcesManagerConfig {
         @NonNull
         public Builder setCollectableFitnessMetrics(@NonNull Set<FitnessMetricsType> fitnessMetrics) {
             Objects.requireNonNull(fitnessMetrics, "metrics must be not null");
-            final Set<FitnessMetricsType> fitnessMetricsReadOnlyCopy =
-                Collections.unmodifiableSet(fitnessMetrics.stream().collect(Collectors.toSet()));
-            config.collectableFitnessMetrics = fitnessMetricsReadOnlyCopy;
+            config.collectableFitnessMetrics = Set.copyOf(fitnessMetrics);
+            return this;
+        }
+
+        /**
+         * Defines the set of fitness metrics to be collected by local trackers (i.e. Health Connect). The set of metrics is
+         * used to determine a list of requested permissions for local activity sources, and to determine background
+         * tasks for syncing data from Health Connect. <br>
+         * It's allowed to provide an empty set if you intend to use only external activity sources. <br>
+         * NOTE: this doesn't affect external trackers and how they request permissions.
+         *
+         * @param fitnessMetrics set of fitness metrics to be collected by local trackers
+         * @return configured builder
+         */
+        @SuppressLint("NewApi")
+        @NonNull
+        public Builder setCollectableHCFitnessMetrics(@NonNull Set<FitnessMetricsType> fitnessMetrics) {
+            Objects.requireNonNull(fitnessMetrics, "metrics must be not null");
+            config.collectableHCFitnessMetrics = Set.copyOf(fitnessMetrics);
             return this;
         }
 
@@ -282,6 +425,11 @@ public class ActivitySourcesManagerConfig {
             Objects.requireNonNull(config.profileBackgroundSyncMode,
                 "GoogleFit profile background sync mode must be set");
             Objects.requireNonNull(config.collectableFitnessMetrics, "Collectable fitness metrics must be set");
+            Objects.requireNonNull(config.healthConnectIntradayBackgroundSyncMode,
+                "HealthConnect intraday background sync mode must be set");
+            Objects.requireNonNull(config.healthConnectProfileSyncMode,
+                "HealthConnect profile background sync mode must be set");
+            Objects.requireNonNull(config.collectableHCFitnessMetrics, "Collectable fitness metrics must be set");
             this.created = true;
             return config;
         }
@@ -299,12 +447,28 @@ public class ActivitySourcesManagerConfig {
         final Set<FitnessMetricsType> fitnessMetrics =
             Stream.of(FitnessMetricsType.INTRADAY_CALORIES, FitnessMetricsType.HEIGHT, FitnessMetricsType.WEIGHT)
                 .collect(Collectors.toSet());
-        final ActivitySourcesManagerConfig config =
-            new ActivitySourcesManagerConfig.Builder().enableGoogleFitIntradayBackgroundSync()
-                .disableGoogleFitSessionsBackgroundSync()
-                .enableProfileBackgroundSync()
-                .setCollectableFitnessMetrics(fitnessMetrics)
-                .build();
-        return config;
+        return new Builder().enableGoogleFitIntradayBackgroundSync()
+            .disableGoogleFitSessionsBackgroundSync()
+            .enableProfileBackgroundSync()
+            .setCollectableFitnessMetrics(fitnessMetrics)
+            .build();
+    }
+
+    /**
+     * Build the default config with the minimum required fitness metrics for core functionality and enabled background
+     * synchronization for intraday and user profile data from Health Connect.
+     *
+     * @return config
+     */
+    @SuppressLint("NewApi")
+    @NonNull
+    public static ActivitySourcesManagerConfig buildHCDefaultConfig() {
+        final Set<FitnessMetricsType> fitnessMetrics =
+            Stream.of(FitnessMetricsType.INTRADAY_CALORIES, FitnessMetricsType.STEPS, FitnessMetricsType.HEIGHT, FitnessMetricsType.WEIGHT)
+                .collect(Collectors.toSet());
+        return new Builder().enableHealthConnectIntradayBackgroundSync()
+            .enableHealthConnectProfileBackgroundSync()
+            .setCollectableHCFitnessMetrics(fitnessMetrics)
+            .build();
     }
 }
